--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -11,7 +11,7 @@
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Forgot Your Password?</h2>
 			<p>Use the form below to reset your password.<br/><small>We will send password reset instructions to the email address associated with your account.</small></p>
-			<form name="form" class="form-validation mt-20" ng-submit="submitForgetPassword(user)" novalidate>
+			<form name="form" class="form-validation mt-20" ng-validate ng-submit="submitForgetPassword(user,form)" novalidate>
 				
 				<div class="form-group">
 					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
