--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -40,13 +40,13 @@
 												<span class="error">{{fac_error}}</span>
 												<div class="form-group">
 													<label for="">Facility Name <span class="text-danger">*</span></label>
-													<input type="text" name="facility_name" maxlength="30" ng-model="facility.facility_name" id="" class="form-control" placeholder=""
+													<input type="text" replace="[^a-zA-Z0-9]" with="" name="facility_name" maxlength="30" ng-model="facility.facility_name" id="" class="form-control" placeholder=""
 													 required>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility Location <span class="text-danger">*</span></label>
-														<input type="text" name="facility_location" id="" maxlength="30" ng-model="facility.facility_location" class="form-control"
+														<input type="text" replace="[^a-zA-Z0-9]" with="" name="facility_location" id="" maxlength="30" ng-model="facility.facility_location" class="form-control"
 														placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
