--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -674,7 +674,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Card Number</label>
-																		<input type="text" ng-model="wiegand.wiegand_card_number" name="" id="" class="form-control">
+																		<input type="text" ng-model="wiegand.wiegand_card_number" name="card_number" id="" class="form-control" required>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Assign Doors</label><br/>
@@ -689,7 +689,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Facility Code</label>
-																		<input type="text" name="" ng-model="wiegand.wiegand_facility_code" ng-keypress="onlyNumber($event)" id="" class="form-control">
+																		<input type="text" name="facility_code" ng-model="wiegand.wiegand_facility_code" ng-keypress="onlyNumber($event)" id="" class="form-control" required>
 																	</div>
 																</div>
 																<div class="row">
