--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -115,9 +115,9 @@
 											<td>{{active.time*1000 | date:'d MMM yyyy, h:mm a': 'UTC'}}</td>
 
 											<td>{{active['user/event'] ? active['user/event'] : 'N/A' }}</td>
-											<td>{{active['access_mode'] ? active['user/event'] : 'N/A' }}</td>
-											<td>{{active['facility'] ? active['user/event'] : 'N/A' }}</td>
-											<td>{{active['door/device'] ? active['user/event'] : 'N/A' }}</td>
+											<td>{{active['access_mode'] ? active['access_mode'] : 'N/A' }}</td>
+											<td>{{active['facility'] ? active['facility'] : 'N/A' }}</td>
+											<td>{{active['door/device'] ? active['door/device'] : 'N/A' }}</td>
 											
 											<td class="customicon ta-c">
 												<a href="" ng-click="viewActivity(active['device_id'],active.media_file,active.event_id)" uib-tooltip="View"><i class="fa fa-eye" aria-hidden="true"></i></a>
